templates/install/kubernetes/addons/keycloak.yaml
---
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: enmasse
    name: keycloak
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: enmasse
          name: keycloak
      spec:
        containers:
        - env:
          - name: KEYCLOAK_USER
            valueFrom:
              secretKeyRef:
                key: admin.username
                name: keycloak-credentials
          - name: KEYCLOAK_PASSWORD
            valueFrom:
              secretKeyRef:
                key: admin.password
                name: keycloak-credentials
          image: docker.io/enmasseproject/keycloak:latest
          livenessProbe:
            initialDelaySeconds: 120
            tcpSocket:
              port: amqps
          name: keycloak
          ports:
          - containerPort: 5671
            name: amqps
          - containerPort: 8080
            name: http
          volumeMounts:
          - mountPath: /opt/jboss/keycloak/standalone/data
            name: keycloak-persistence
          - mountPath: /opt/jboss/keycloak/standalone/cert
            name: standard-authservice-cert
        volumes:
        - emptyDir: {}
          name: keycloak-persistence
        - name: standard-authservice-cert
          secret:
            secretName: standard-authservice-cert
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: enmasse
    name: keycloak-controller
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: enmasse
          name: keycloak-controller
      spec:
        containers:
        - env:
          - name: STANDARD_AUTHSERVICE_ADMIN_USER
            valueFrom:
              secretKeyRef:
                key: admin.username
                name: keycloak-credentials
          - name: STANDARD_AUTHSERVICE_ADMIN_PASSWORD
            valueFrom:
              secretKeyRef:
                key: admin.password
                name: keycloak-credentials
          image: docker.io/enmasseproject/keycloak-controller:latest
          name: keycloak-controller
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 128Mi
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: enmasse
    name: standard-authservice
  spec:
    ports:
    - name: amqps
      port: 5671
      protocol: TCP
      targetPort: amqps
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    selector:
      name: keycloak
kind: List
