templates/install/kubernetes/addons/none-authservice.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: enmasse
    name: none-authservice
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: enmasse
          name: none-authservice
      spec:
        containers:
        - env:
          - name: LISTENPORT
            value: '5671'
          image: docker.io/lulf/none-authservice:latest
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: amqps
          name: none-authservice
          ports:
          - containerPort: 5671
            name: amqps
          resources:
            limits:
              memory: 48Mi
            requests:
              memory: 48Mi
          volumeMounts:
          - mountPath: /opt/none-authservice/cert
            name: none-authservice-cert
        volumes:
        - name: none-authservice-cert
          secret:
            secretName: none-authservice-cert
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: enmasse
    name: none-authservice
  spec:
    ports:
    - name: amqps
      port: 5671
      protocol: TCP
      targetPort: amqps
    selector:
      name: none-authservice
kind: List
