templates/install/kubernetes/addons/prometheus.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: prometheus
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: prometheus
      spec:
        containers:
        - image: prom/prometheus:v2.0.0
          name: prometheus
          ports:
          - containerPort: 9090
            name: prometheus
          volumeMounts:
          - mountPath: /etc/prometheus
            name: prometheus-config
            readOnly: true
          - mountPath: /prometheus
            name: prometheus-data
            readOnly: false
        serviceAccount: prometheus-server
        volumes:
        - configMap:
            name: prometheus-config
          name: prometheus-config
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
- apiVersion: v1
  data:
    prometheus.yml: '{"global": {"evaluation_interval": "60s", "scrape_interval":
      "60s"}, "scrape_configs": [{"job_name": "artemis_job", "kubernetes_sd_configs":
      [{"role": "pod"}], "relabel_configs": [{"action": "keep", "regex": "artemismetrics.*",
      "source_labels": ["__meta_kubernetes_pod_container_port_name"]}, {"action":
      "replace", "source_labels": ["__meta_kubernetes_pod_name"], "target_label":
      "kubernetes_pod_name"}]}, {"job_name": "router_job", "kubernetes_sd_configs":
      [{"role": "pod"}], "relabel_configs": [{"action": "keep", "regex": "routermetrics.*",
      "source_labels": ["__meta_kubernetes_pod_container_port_name"]}, {"action":
      "replace", "source_labels": ["__meta_kubernetes_pod_name"], "target_label":
      "kubernetes_pod_name"}]}]}'
  kind: ConfigMap
  metadata:
    name: prometheus-config
- apiVersion: v1
  kind: Service
  metadata:
    name: prometheus
  spec:
    ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
    selector:
      name: prometheus
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: prometheus-data
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 10Gi
kind: List
