templates/install/kubernetes/addons/console-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: console
          servicePort: 8080
